<resources>
    <string name="app_name" translatable="false">Always On AMOLED</string>
    <string name="unlock">Turn the screen on</string>
    <string name="action_revert">Revert</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_rate">Rate the app</string>
    <string name="action_restart">Restart now</string>
    <string name="never_show_again">Never show again</string>
    <string name="action_support_the_development">Support The Development</string>
    <string name="support_how_much">How much would you like to donate?</string>
    <string name="supporter_feature_only">This feature is only available for supporters, you can choose how much you want to donate to become a supporter, how much would you like to donate?</string>
    <string name="support_choose">How much would you like to donate?</string>
    <string name="support_1">Unlock</string>
    <string name="support_2">Donate</string>
    <string name="support_5">Big donation</string>
    <string name="support_10">Awesome donation</string>
    <string name="support_20">Huge donation</string>
    <string name="support_25">Super donation!</string>
    <string name="support_1_desc">Unlock all the premium features in the app and support the development</string>
    <string name="support_2_desc">Support the development a bit more. Same features as regular unlock.</string>
    <string name="support_5_desc">Donate to the project and help me continue working on the app. Same features as regular unlock.</string>
    <string name="support_10_desc">Show that you appreciate the project and keep the development active. Same features as regular unlock.</string>
    <string name="support_20_desc">Wow! a huge donation! thank you very much! :) Same features as regular unlock.</string>
    <string name="support_25_desc">Amazing! that\'s a lot of money!! This will really help the project! Same features as regular unlock.</string>
    <string name="intro_allow_now">Allow now</string>
    <string name="intro_permissions">Read phone state</string>
    <string name="intro_permissions_desc">The app needs permission to read phone state to turn on the device when you receive a call.</string>
    <string name="intro_draw_over">Draw over other apps</string>
    <string name="intro_draw_over_desc">The app needs permission to draw over other apps</string>
    <string name="intro_modify_desc">The app needs permission to change the device brightness</string>
    <string name="intro_modify">Modify system settings</string>
    <string name="intro_wake_ups">Wake up methods</string>
    <string name="intro_wake_ups_desc">Choose how you want to be able to wake up your phone from \"always on\" state. Don\'t worry, you can change it in the app later.</string>
    <string name="intro_checkbox_volume_keys">Volume keys to unlock</string>
    <string name="intro_checkbox_swipe_up">Swipe up from the center of the screen to unlock</string>
    <string name="intro_checkbox_double_tap">Double tap the screen to unlock</string>
    <string name="intro_notifications">Notifications alerts</string>
    <string name="intro_notifications_desc">Do you want to receive notifications from other apps while the screen is in \"always on\" state? If you do, click the \"allow now\" button</string>
    <string name="developer_name">Tomer Rosenfeld</string>
    <string name="developer_twitter">Follow me on Twitter</string>
    <string name="developer_googleplus">Follow me on Google Plus</string>
    <string name="developer_google_play">Check out my apps on Google Play</string>
    <string name="developer_linkedin">Connect with me on LinkedIn</string>
    <string name="developer_github">Fork me on GitHub</string>
    <string name="developer_patreon">Check me out on Patreon</string>
    <string name="thanks">Thank you for your support! :)</string>
    <string name="notification_message">Always On Is Running</string>
    <string name="toast_thanks">Thank you</string>
    <string name="toast_thanks_rate">Thanks you! Please rate the app on play store :)</string>
    <string name="quick_settings_title">Always on</string>
    <string name="quick_settings_service_active">enabled</string>
    <string name="quick_settings_service_inactive">disabled</string>
    <string name="notification_icon">Notification icon</string>
    <string name="widget_toggle">toggle</string>
    <string name="widget_off">Off</string>
    <string name="widget_on">On</string>
    <string name="plugin_dialog_title">Plugin is required</string>
    <string name="plugin_dialog_desc">Seems like your device has hardware buttons, to make them turn off when the service is running, please install the plugin.</string>
    <string name="error">Error</string>
    <string name="error_IAP">Error! Please make sure that you are connected to the internet and restart the app</string>
    <string name="error_0_unknown_error">An error has occurred. Please report to the developer </string>
    <string name="error_0_unknown_error_report_prompt">Click here to report the error</string>
    <string name="error_2_plugin_not_installed">PLUGIN IS NOT INSTALLED</string>
    <string name="error_3_unknown_error_restart">An error has occurred. Please restart the app.</string>
    <string name="error_4_tasker_service_not_initialized">The service wasn\'t initalized correctly</string>
    <string name="error_5_camera_cant_connect_desc">Couldn\'t connect to camera. There might be an issue with your device.</string>
    <string name="warning_1_harm_performance">This can harm the app\'s performance</string>
    <string name="warning_4_device_not_secured">Your device may not be secured now</string>
    <string name="warning_5_device_admin_disable">This will disable some of the app features</string>
    <string name="warning_6_device_admin_disabled">Some features might be disabled now</string>
    <string name="warning_7_disable_fingerprint">This might disable the fingerprint sensor functionality, are you sure you want to enable this?</string>
    <string name="warning_8_intro_allow_all">Please allow all permissions</string>
    <string name="warning_9_allow_notification">Please allow notification access for the app</string>
    <string name="warning_11_no_root">Device must be rooted to use this feature</string>
    <string name="warning_12_please_report">Please let me know what would you like me to add/fix</string>
    <string name="rules_both_charging">Both, while charging and while discharging</string>
    <string name="rules_while_charging">While charging</string>
    <string name="rules_while_not_charging">While not charging</string>
    <string name="rules_always">Always</string>
    <string name="rules_battery_90">90% or higher</string>
    <string name="rules_battery_70">70% or higher</string>
    <string name="rules_battery_50">50% or higher</string>
    <string name="rules_battery_30">30% or higher</string>
    <string name="rules_battery_20">20% or higher</string>
    <string name="rules_battery_10">10% or higher</string>
    <string name="animation_disabled">No animation</string>
    <string name="animation_fade_out">Fade out</string>
    <string name="animation_slide_out">Slide out</string>
    <string name="rules_disabled">Disabled</string>
    <string name="rules_minutes_1">1 Minute</string>
    <string name="rules_minutes_2">2 Minutes</string>
    <string name="rules_minutes_5">5 Minutes</string>
    <string name="rules_minutes_10">10 Minutes</string>
    <string name="rules_minutes_15">15 Minutes</string>
    <string name="rules_minutes_30">30 Minutes</string>
    <string name="rules_hour">1 Hour</string>
    <string name="rules_hours_2">2 Hours</string>
    <string name="rules_orientation_vertical">Portrait (Vertical)</string>
    <string name="rules_orientation_horizontal">Landscape (Horizontal)</string>
    <string name="md_back_label">Back</string>
    <string name="md_cancel_label">Cancel</string>
    <string name="md_choose_label">Choose</string>
    <string name="md_custom_label">Custom</string>
    <string name="md_done_label">Done</string>
    <string name="md_error_label">Error</string>
    <string name="md_presets_label">Presets</string>
    <string name="settings_behaviour">Behaviour</string>
    <string name="settings_about">About</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_general">General</string>
    <string name="settings_shortcuts">Shortcuts</string>
    <string name="settings_wake_up">Gestures &amp; actions</string>
    <string name="settings_rules">Automatic Rules</string>
    <string name="settings_samsung">Samsung</string>
    <string name="settings_enabled">Enable</string>
    <string name="settings_disable_volume_keys">Disable volume keys</string>
    <string name="settings_double_tap_wake">Double tap action</string>
    <string name="settings_gestures_home_button_dismiss">Home button unlocks</string>
    <string name="settings_back_button_wake">Back button action</string>
    <string name="settings_volume_to_stop">Volume keys action</string>
    <string name="settings_swipe_up">Swipe up action</string>
    <string name="settings_swipe_down">Swipe down action</string>
    <string name="settings_brightness">Brightness</string>
    <string name="settings_doze">Doze mode</string>
    <string name="settings_google_now_shortcut">Allow \"OK Google\"</string>
    <string name="settings_memo_text">Memo text</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_persistent_notification">Show persistent notification</string>
    <string name="settings_move_auto">Move the widget automatically</string>
    <string name="settings_font_size">Text size</string>
    <string name="settings_watchface">Customize Watchface</string>
    <string name="settings_proximity">Proximity sensor (Pocket mode)</string>
    <string name="settings_show_am_pm">Show AM/PM</string>
    <string name="settings_text_color">Text Color</string>
    <string name="settings_startafterlock">Start after lock</string>
    <string name="settings_stop_delay">Stop delay</string>
    <string name="settings_auto_brightness">Auto night mode</string>
    <string name="settings_orientation">Screen orientation</string>
    <string name="settings_always_on_memo">Always On Memo</string>
    <string name="settings_stop_on_camera">Allow camera shortcuts</string>
    <string name="settings_rules_cahrging">Charging rules</string>
    <string name="settings_rules_battery">Battery rules</string>
    <string name="settings_font">Font</string>
    <string name="settings_translate">Translate</string>
    <string name="settings_github">GitHub</string>
    <string name="settings_community">Community</string>
    <string name="settings_greenify_integration">Greenify integration</string>
    <string name="settings_licenses">Licenses</string>
    <string name="settings_uninstall">Uninstall</string>
    <string name="settings_exit_animation">Animation</string>
    <string name="settings_raise_to_wake">Raise to wake</string>
    <string name="settings_app_version">Version</string>
    <string name="settings_enable_greenify">Enable Greenify</string>
    <string name="settings_battery_saver">Battery save mode</string>
    <string name="settings_stop_on_camera_desc">Stop the always on screen when the camera is launched</string>
    <string name="settings_auto_brightness_desc">Dim the screen when in dark environment automatically (Sensors may use more battery)</string>
    <string name="settings_stop_delay_desc_short_message">Stop the always on service after:</string>
    <string name="settings_stop_delay_desc">Stop the always on screen after some time without interaction to save battery</string>
    <string name="settings_startafterlock_desc">Only start the service after the screen is locked. Keep this enabled to keep your device secured and fingerprint sensor functional</string>
</resources>