<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#607d8b"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/intro_wake_ups"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center|top"
        android:text="@string/intro_wake_ups_desc"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/intro_checkbox_double_tap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/intro_checkbox_double_tap"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/intro_checkbox_swipe_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_checkbox_swipe_up"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/intro_checkbox_volume_keys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_checkbox_volume_keys"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>