<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_developer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tomer.alwayson.activities.DeveloperActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/profile"
            app:civ_border_color="@android:color/black"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/developer_name" />

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:layout_marginTop="36dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="6">

                <LinearLayout
                    android:id="@+id/twitter"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        app:srcCompat="@drawable/ic_twitter"
                        android:contentDescription="@string/developer_twitter" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:lines="1"
                        android:text="@string/developer_twitter" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/google_plus"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        app:srcCompat="@drawable/ic_gplus"
                        android:contentDescription="@string/developer_googleplus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:lines="1"
                        android:text="@string/developer_googleplus" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/google_play"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        app:srcCompat="@drawable/ic_google_play"
                        android:contentDescription="@string/developer_google_play" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:lines="1"
                        android:text="@string/developer_google_play" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linkedin"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        app:srcCompat="@drawable/ic_linkedin"
                        android:contentDescription="@string/developer_linkedin" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:lines="1"
                        android:text="@string/developer_linkedin" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/github"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        app:srcCompat="@drawable/ic_github"
                        android:contentDescription="@string/developer_github" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:lines="1"
                        android:text="@string/developer_github" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/patreon"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        app:srcCompat="@drawable/ic_patreon"
                        android:contentDescription="@string/developer_patreon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:lines="1"
                        android:text="@string/developer_patreon" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
